--- a/styles/larger.css
+++ b/styles/larger.css
@@ -34,7 +34,6 @@ body {
 
 main {
   margin: 1rem 2rem;
-  height: 100vh;
 }
 
 /*------------------- HEADER -------------------*/
@@ -207,6 +206,23 @@ section h2 {
 .cert-filter-item.active {
   background-color: var(--color-primary);
   color: white;
+}
+
+.course-list {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding: 20px;
+}
+
+.course-item {
+  color: var(--color-tertiary);
+  padding: 5px 10px;
+  margin: 10px;
+  width: 100px;
+  font-weight: 500;
+  border-radius: 4px;
+  box-shadow: var(--shadow-small);
 }
 
 /* Footer */
