--- a/styles/larger.css
+++ b/styles/larger.css
@@ -2,7 +2,7 @@
   /* Colors */
   --color-primary: #185ba7;
   --color-secondary: #3bb4ec;
-  --color-tertiary: #0c0c0c;
+  --color-tertiary: #030303;
   --color-background: #f4f4f4;
   --color-accent: lightbrown;
   --color-text: #333;
@@ -33,7 +33,8 @@ body {
 }
 
 main {
-  margin: 1rem;
+  margin: 2rem;
+  padding: 0 4rem;
 }
 
 /*------------------- HEADER -------------------*/
@@ -164,9 +165,8 @@ li a.active {
 section {
   background-color: var(--color-background);
   box-shadow: var(--shadow-large);
-  border: 1px solid var(--color-primary);
   border-radius: 4px;
-  margin: 20px auto;
+  margin: 40px auto;
   text-align: center;
 }
 
@@ -178,6 +178,23 @@ section h2 {
   padding: 10px 0;
   text-align: center;
 }
+
+/* Malawi section */
+
+.zebra-img {
+  width: 70%;
+  height: auto;
+  margin: 20px auto;
+  padding: 20px;
+}
+
+figcaption {
+  font-size: 10px;
+  color: var(--color-tertiary);
+  padding: 10px;;
+  text-align: center;
+}
+
 
 /* Certificate Section */
 .section-certificate {
@@ -228,6 +245,7 @@ section h2 {
 
 .course-item {
   color: var(--color-tertiary);
+  background-color: #e4e4e4;
   padding: 5px 10px;
   margin: 10px;
   width: 100px;
@@ -250,7 +268,6 @@ footer {
 }
 
 .footer-modified {
-  color: var(--color-tertiary);
   font-style: italic;
-  font-weight: 500;
 }
+
