--- a/styles/larger copy.css
+++ b/styles/larger copy.css
@@ -30,8 +30,6 @@ body {
   background-color: var(--color-background);
   padding: 0;
   margin: 0;
-  height: 100%;
-  width: 100%;
 }
 
 main {
@@ -41,76 +39,23 @@ main {
 
 /*------------------- HEADER -------------------*/
 
-/* NavBar */
-
-nav {
-  padding: 10px 30px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+header {
   background-color: var(--color-primary);
   color: white;
-  position: relative;
-  height: 70px;
+  padding: 0;
+  text-align: center;
 }
 
-nav ul {
+.navigation {
   display: flex;
-  gap: 30px;
+  flex-direction: column;
+  gap: 10px;
+  justify-content: center;
+  align-items: center;
+  max-width: 100%;
+  padding-top: 20px;
+  position: relative;
 }
-
-nav ul li {
-  list-style: none;
-}
-
-nav ul li a {
-  text-decoration: none;
-  color: white;
-}
-
-/* Menu and Close Icons */
-#menu-icon,
-#close-icon {
-  display: none;
-  cursor: pointer;
-  font-size: 30px;
-  color: white;
-  position: absolute;
-  top: 20px;
-  right: 30px;
-  z-index: 1001;
-}
-
-/* Small Screen */
-@media (max-width: 768px) {
-  nav ul {
-    position: absolute;
-    top: 70px;
-    left: 0;
-    right: 0;
-    flex-direction: column;
-    text-align: center;
-    background-color: var(--color-primary);
-    gap: 0;
-    overflow: hidden;
-  }
-
-  nav ul li {
-    padding: 10px 0;
-  }
-
-  #menu-icon,
-  #close-icon {
-    display: block;
-  }
-
-  #menu-list {
-    transition: all 0.7s ease-in-out;
-    max-height: 0;
-    overflow: hidden;
-  }
-}
-
 /* Profile */
 .profile {
   display: flex;
@@ -118,8 +63,7 @@ nav ul li a {
   align-items: center;
   gap: 20px;
   margin: 0 auto;
-  padding: 10px;
-  background-color: var(--color-secondary);
+  padding: 0 10px;
 }
 .profile img {
   width: 100px;
@@ -135,7 +79,89 @@ nav ul li a {
   margin: 0;
 }
 
-/*-------------- Sections ----------------*/
+/* NavBar */
+
+.navbar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--color-primary);
+  padding: 10px;
+  position: relative;
+  max-width: 100%;
+}
+
+.nav-list {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  gap: 60px;
+  padding-right: 10px;
+  margin: 0;
+  position: relative;
+  background-color: var(--color-tertiary);
+  height: 50px;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+li {
+  display: inline-block;
+  margin: 0 10px;
+  font-size: var(--paragraph-size, 16px);
+  font-weight: 600;
+}
+
+li a {
+  text-decoration: none;
+  color: white;
+  font-size: var(--paragraph-size);
+  padding: 10px;
+  position: relative;
+  transition: color 0.3s ease;
+}
+
+li a::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 0;
+  height: 2px;
+  background-color: var(--secondary-color);
+  transition: width 0.3s ease;
+}
+
+li a:hover::after {
+  width: 100%;
+}
+
+li a:hover {
+  color: var(--color-secondary);
+}
+
+li a.active {
+  color: var(--color-secondary);
+}
+
+/* Hamburger icon */
+.icon {
+  display: none;
+  font-size: 20px;
+  color: white;
+  cursor: pointer;
+  z-index: 1001;
+}
+.icon:hover {
+  color: var(--secondary-color);
+}
+
+/* Sections */
 
 section {
   background-color: var(--color-background);
@@ -166,9 +192,10 @@ section h2 {
 figcaption {
   font-size: 10px;
   color: var(--color-tertiary);
-  padding: 10px;
+  padding: 10px;;
   text-align: center;
 }
+
 
 /* Certificate Section */
 .section-certificate {
@@ -244,3 +271,4 @@ footer {
 .footer-modified {
   font-style: italic;
 }
+
