Improve navigation styles and menu functionality
Adds font-weight styling and hover/active effects for navigation links, enhancing readability and interactivity. Adjusts comments for consistency and fixes minor formatting issues in CSS. No functional changes to JavaScript logic.

--- a/styles/small.css
+++ b/styles/small.css
@@ -61,12 +61,21 @@ nav ul {
 
 nav ul li {
   list-style: none;
+  font-weight: 600;
 }
 
 nav ul li a {
   text-decoration: none;
   color: white;
 }
+
+nav ul li a:hover {
+  color: var(--color-secondary);
+}
+nav ul li a.active {
+  color: var(--color-secondary);
+}
+
 
 /* Menu and Close Icons */
 #menu-icon,
@@ -154,7 +163,7 @@ section h2 {
   text-align: center;
 }
 
-/* Malawi section */
+/* Malawi Section */
 
 .zebra-img {
   width: 70%;
