--- a/styles/small.css
+++ b/styles/small.css
@@ -76,7 +76,6 @@ nav ul li a.active {
   color: var(--color-secondary);
 }
 
-
 /* Menu and Close Icons */
 #menu-icon,
 #close-icon {
@@ -154,6 +153,12 @@ section {
   text-align: center;
 }
 
+section ul li {
+  list-style: none;
+  padding: 10px;
+  font-size: var(--paragraph-size);
+}
+
 section h2 {
   background-color: var(--color-primary);
   color: white;
@@ -166,7 +171,7 @@ section h2 {
 /* Malawi Section */
 
 .zebra-img {
-  width: 70%;
+  width: 100%;
   height: auto;
   margin: 20px auto;
   padding: 20px;
@@ -186,52 +191,79 @@ figcaption {
   align-items: center;
 }
 
-.certificate-filter {
-  background-color: rgb(224, 219, 219);
-  width: 100%;
-  height: 50px;
-  padding: 10px;
+/* Course Filter */
+
+.course-filter {
+  height: 80px;
+  /* padding: 10px; */
   display: flex;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
   gap: 20px;
   flex-wrap: wrap;
+  background-color: rgb(224, 219, 219);
+  margin: 0 auto;
+  width: 100%;
 }
 
-.cert-filter-item {
+.course-filter ul {
+  display: flex;
+  gap: 10px;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  padding: 0 10px;
+}
+
+.course-filter-item {
   background-color: var(--color-tertiary);
   color: white;
-  padding: 5px 10px;
+  padding: 10px 10px;
   width: 100px;
   font-weight: 500;
   border-radius: 4px;
   box-shadow: var(--shadow-small);
 }
 
-.cert-filter-item:hover {
+.course-filter-item:hover {
   background-color: var(--color-primary);
   color: white;
   cursor: pointer;
 }
 
-.cert-filter-item.active {
+.course-filter-item.active {
   background-color: var(--color-primary);
   color: white;
 }
 
+/* course */
 .course-list {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   gap: 20px;
   padding: 20px;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.course-list ul {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 10px;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  padding: 0;
 }
 
 .course-item {
   color: var(--color-tertiary);
   background-color: #e4e4e4;
-  padding: 5px 10px;
+  padding: 10px 10px;
   margin: 10px;
-  width: 100px;
+  width: 200px;
   font-weight: 500;
   border-radius: 4px;
   box-shadow: var(--shadow-small);
