--- a/styles/small.css
+++ b/styles/small.css
@@ -4,7 +4,7 @@
   --color-secondary: #3bb4ec;
   --color-tertiary: #191919;
   --color-background: #f4f4f4;
-  --color-accent:  rgb(108, 29, 29);
+  --color-accent: rgb(108, 29, 29);
   --color-text: #333;
 
   /* Font Sizes */
@@ -51,7 +51,7 @@ nav {
   background-color: var(--color-primary);
   color: white;
   position: relative;
-  height: 70px;
+  height: 120px;
 }
 
 nav ul {
@@ -84,7 +84,7 @@ nav ul li a.active {
   font-size: 30px;
   color: white;
   position: absolute;
-  top: 20px;
+  top: 45px;
   right: 30px;
   z-index: 1001;
 }
@@ -93,7 +93,9 @@ nav ul li a.active {
 @media (max-width: 768px) {
   nav ul {
     position: absolute;
-    top: 70px;
+    top: 100px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     left: 0;
     right: 0;
     flex-direction: column;
@@ -117,6 +119,21 @@ nav ul li a.active {
     max-height: 0;
     overflow: hidden;
   }
+
+  /* Profile */
+  .profile {
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    top: 0;
+    left: 20px;
+    align-items: center;
+    gap: 20px;
+    margin: 0 auto;
+    padding: 10px;
+    background-color: var(--color-primary);
+    z-index: 1000;
+  }
 }
 
 /* Profile */
@@ -127,7 +144,8 @@ nav ul li a.active {
   gap: 20px;
   margin: 0 auto;
   padding: 10px;
-  background-color: var(--color-secondary);
+  background-color: var(--color-primary);
+ 
 }
 .profile img {
   width: 100px;
@@ -259,54 +277,51 @@ figcaption {
 }
 
 .course-item {
-    color: var(--color-tertiary);
-    background-color: #e4e4e4;
-    padding: 10px;
-    margin: 10px;
-    width: 300px;
-    font-weight: 500;
-    border-radius: 4px;
-    box-shadow: var(--shadow-small);
-    position: relative;
+  color: var(--color-tertiary);
+  background-color: #e4e4e4;
+  padding: 10px;
+  margin: 10px;
+  width: 300px;
+  font-weight: 500;
+  border-radius: 4px;
+  box-shadow: var(--shadow-small);
+  position: relative;
 }
 
 .course-item.completed {
-    background-color: var(--color-accent);
-    color: whitesmoke;
+  background-color: var(--color-accent);
+  color: whitesmoke;
 }
 
 .course-item.completed::after {
-    content: "✓";
-    position: absolute;
-    top: 5px;
-    right: 10px;
-    font-size: 20px;
-    color: whitesmoke;
-  
+  content: "✓";
+  position: absolute;
+  top: 5px;
+  right: 10px;
+  font-size: 20px;
+  color: whitesmoke;
 }
 
-
 .course-filter button {
-    background-color: var(--color-tertiary);
-    color: white;
-    padding: 10px;
-    margin: 5px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
+  background-color: var(--color-tertiary);
+  color: white;
+  padding: 10px;
+  margin: 5px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
 }
 
 .course-filter button.active {
-    background-color: var(--color-primary);
+  background-color: var(--color-primary);
 }
 
 .total-credits {
-    margin: 20px 0;
-    font-weight: bold;
-    font-size: 14px;
-    color: var(--color-accent);
+  margin: 20px 0;
+  font-weight: bold;
+  font-size: 14px;
+  color: var(--color-accent);
 }
-
 
 /* Footer */
 footer {
