--- a/styles/small.css
+++ b/styles/small.css
@@ -1,7 +1,7 @@
 :root {
   /* Colors */
   --color-primary: #185ba7;
-  --color-secondary: #3bb4ec;
+  --color-secondary: #94d6f4;
   --color-tertiary: #191919;
   --color-background: #f4f4f4;
   --color-accent: rgb(108, 29, 29);
@@ -72,8 +72,32 @@ nav ul li a {
 nav ul li a:hover {
   color: var(--color-secondary);
 }
+
 nav ul li a.active {
-  color: var(--color-secondary);
+  position: relative;
+  text-decoration: none;
+}
+
+nav ul li a.active::after {
+  content: "";
+  display: block;
+  position: absolute;
+  left: 0;
+  right: 0;
+  height: 3px;
+  background: var(--color-secondary);
+  border-radius: 2px;
+  bottom: -6px;
+  transform: scaleX(0);
+  transition: transform 0.3s cubic-bezier(.4,0,.2,1);
+  transform-origin: left;
+}
+nav ul li a:hover::after {
+  transform: scaleX(1);
+}
+
+nav ul li a.active::after {
+  transform: scaleX(1);
 }
 
 /* Menu and Close Icons */
