--- a/styles/small.css
+++ b/styles/small.css
@@ -215,14 +215,15 @@ section h2 {
 .zebra-img {
   width: 100%;
   height: auto;
-  margin: 20px auto;
+  margin: 0 auto;
   padding: 20px;
 }
 
 figcaption {
-  font-size: 10px;
+  font-size: 12px;
   color: var(--color-tertiary);
-  padding: 10px;
+  padding-top: 0;
+  padding-bottom: 10px;
   text-align: center;
 }
 
