--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -51,12 +51,10 @@
 
 html,
 body {
-  font-family: "Montserrat", sans-serif;
+  font-family: var(--font-family);
   font-size: var(--paragraph-size);
   line-height: 1.5;
   background-color: var(--color-background);
-  padding: 0;
-  margin: 0;
   height: 100%;
   width: 100%;
 }
@@ -98,11 +96,12 @@ nav ul li a:hover {
 }
 nav ul li a.active {
   color: var(--color-secondary);
-  font-weight: bold;
+  font-weight: var(--font-weight-bold);
 }
-nav ul li a.active:hover {
+/* nav ul li a.active:hover {
   color: var(--color-secondary);
-}
+} */
+
 nav ul li a.active:after {
   content: "";
   display: block;
@@ -143,6 +142,21 @@ nav ul li a.active:after {
 .footer-logo img {
   max-width: 100%;
   height: auto;
+}
+
+.footer-details {
+  flex: 1;
+  min-width: 200px;
+  font-size: var(--font-size-small);
+  padding-top: 20px;
+}
+
+.footer-text {
+  font-weight: 600;
+}
+
+.footer-modified {
+  font-style: italic;
 }
 
 .footer-social h5,
@@ -192,7 +206,7 @@ nav ul li a.active:after {
   padding: 10px;
   font-size: var(--font-size-small);
   border: 1px solid var(--color-accent);
-  border-radius: 4px;
+  border-radius: var(--border-radius-small);
   box-sizing: border-box;
 }
 /* button */
@@ -201,7 +215,7 @@ nav ul li a.active:after {
   background-color: var(--color-secondary);
   color: #fff;
   border: none;
-  border-radius: 4px;
+  border-radius: var(--border-radius-small);
   cursor: pointer;
   font-size: var(--font-size-small);
   transition: background-color 0.3s ease;
@@ -212,7 +226,7 @@ nav ul li a.active:after {
 
 .footer-copyright {
   margin-top: 20px;
-  font-size: 0.75rem;
+  font-size: var(--font-size-small);
   color: #ccc;
 }
 
