--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -47,6 +47,17 @@ main {
   padding: 0 4rem;
 }
 
+/* ==== MAIN ==== */
+
+@media (max-width: 600px) {
+  main {
+    margin: 0.5rem;
+    padding: 0 0.5rem;
+  }
+}
+
+
+
 p {
   font-size: var(--font-size-medium);
   color: var(--color-text);
@@ -420,7 +431,6 @@ nav ul li a:hover:after {
   font-size: 1em;
   opacity: 0.85;
 }
-
 
 
 
